--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="checking_setup">Checking setup …</string>
     <string name="checking_setup_result_ok">All good. Start hacking!</string>
     <string name="checking_setup_result_fail">Issue found: %1$s</string>
+    <string name="matchtext">Time: 12:00
+Location: Undergraduate Center</string>
+    <string name="top5">1. University of Helsinki:  17 895\n
+2. Aalto University: 16 980\n
+3. University of Turku: 15 780\n
+4. LUT University: 13 120\n
+5. Univesity of Tampere: 11 660</string>
 </resources>
